--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,13 +1,16 @@
 @use 'variables'
-  
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;400;500;600;700&display=swap')
+
 *  
   padding: 0
   margin: 0
   box-sizing: border-box
-  font-family: variables.$font-stack
+  font-family: 'Fira Sans', sans-serif
 
 body
   background-color: variables.$body-bg-color
+  color: variables.$text-color
 
 a, svg
   transition: .4s
