--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,9 +1,9 @@
 $font-stack: "Helvetica"
 $text-color: #fff
-$font-color-secondary: #a6a6a6
+$text-color-secondary: #a6a6a6
 $body-bg-color: #271B31
 $bg-color: #111
 $bg-color-secondary: #1d1d1d
 $container-border-radius: 10px
-$card-border-radius: 5x
+$card-border-radius: 5px
 $gradient: linear-gradient(#b6f829, #67dd0a)
