--- a/src/styles/components/tecnologiesContainer.sass
+++ b/src/styles/components/tecnologiesContainer.sass
@@ -46,5 +46,11 @@
     #react
       svg
         color: #61dafb
+    #typescript
+      svg
+        color: #2F74C0
+    #tailwind
+      svg
+        color: #3AB0CE
 
     
