:iphone: Adjusting responsiveness mobile

--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -1,10 +1,14 @@
 @use '../variables'
+@use '../mixins'
 
 #portfolio
   display: flex
   flex-wrap: wrap
   padding: 3rem
   gap: 3rem
+
+  @include mixins.mobile
+    padding: 1rem
 
   h1
     width: 100%
@@ -13,3 +17,7 @@
     background: variables.$gradient
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent 
+
+    @include mixins.mobile
+      font-size: 3rem
+      text-align: center
