--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -25,6 +25,9 @@
     margin-top: 22rem
     padding: .8rem 1.2rem
 
+    @include mixins.mobile
+      margin-top: 14rem
   .btn
+    width: 80%
     @include mixins.btn
         
