--- a/src/styles/components/mainContent.sass
+++ b/src/styles/components/mainContent.sass
@@ -7,6 +7,9 @@
   border-radius: variables.$container-border-radius
   padding: 3rem
 
+  @include mixins.mobile
+    padding: 2rem
+
   section
     display: flex
     flex-direction: column
@@ -20,14 +23,17 @@
     justify-content: start
     gap: 1rem
 
+    @include mixins.mobile
+      font-size: 1.5rem
+
     &:after
       @include mixins.gradient-border
 
   p
     color: variables.$text-color-secondary
     margin-bottom: 1rem
-    line-height: 1.2rem
-    font-size: 1.2rem
+    line-height: 1.5rem
+    font-size: 1rem
 
   .btn
     @include mixins.btn
