--- a/src/styles/components/mainContent.sass
+++ b/src/styles/components/mainContent.sass
@@ -7,6 +7,9 @@
   border-radius: variables.$container-border-radius
   padding: 3rem
 
+  // @include mixins.tablet-lg
+  //   flex: 
+
   @include mixins.mobile
     padding: 2rem
 
