--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -23,3 +23,11 @@
 @mixin mobile
   @media (max-width: 425px)
     @content
+
+@mixin tablet
+  @media (max-width: 1080px)
+    @content
+
+@mixin tablet-lg
+  @media (max-width: 928px)
+    @content
