:iphone: Add responsiveness Project card

--- a/src/styles/components/app.sass
+++ b/src/styles/components/app.sass
@@ -7,10 +7,10 @@
   padding: 3rem
   gap: 3rem
 
-  @include mixins.tablet-lg
+  @include mixins.tablet-sm
     display: block
 
-  @include mixins.mobile
+  @include mixins.tablet-sm
     padding: 1rem
 
   h1
@@ -21,6 +21,6 @@
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent 
 
-    @include mixins.tablet-lg
+    @include mixins.tablet-sm
       font-size: 3rem
       text-align: center
