--- a/src/styles/components/mainContent.sass
+++ b/src/styles/components/mainContent.sass
@@ -6,11 +6,8 @@
   flex: 2 1 0
   border-radius: variables.$container-border-radius
   padding: 3rem
-
-  // @include mixins.tablet-lg
-  //   flex: 
-
-  @include mixins.mobile
+  
+  @include mixins.tablet-sm
     padding: 2rem
 
   section
