--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -18,7 +18,7 @@
     position: absolute
     top: -3rem
 
-    @include mixins.tablet-lg
+    @include mixins.tablet-sm
       max-width: 60%
     //   position: static
       
@@ -29,7 +29,7 @@
     margin-top: 60%
     padding: .8rem 1.2rem
 
-    @include mixins.tablet-lg
+    @include mixins.tablet-sm
       margin-top: 55%
 
   .btn
